adding starter code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section>
       <!-- Image -->
-      <img src="https://via.placeholder.com/200" alt="placeholder image"/>
+      <img src="https://wallpapersafari.com/w/MUcNA0">
 
       <!-- Paragraph -->
       <h3>About Me</h3>
