--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section>
       <!-- Image -->
-      <img src="https://wallpapersafari.com/w/MUcNA0">
+      <img src="file:///Users/liliahernandez/Desktop/challenge-2/Assets/images/image-1.jpg" width="50%">
 
       <!-- Paragraph -->
       <h3>About Me</h3>
